[package]
name = "apr"
version = "0.2.0"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@apache.org>"]
repository = "https://github.com/jelmer/apr-rs.git"
homepage = "https://github.com/jelmer/apr-rs"
license = "Apache-2.0"
description = "Rust bindings for Apache Portable Runtime"
documentation = "https://docs.rs/apr"

[lib]
doctest = false

[dependencies]
ctor = "0.4"
url = { version = "2", optional = true }

[features]
url = ["dep:url"]
pool-debug = []

[build-dependencies]
bindgen = ">=0.60"
system-deps = "7"

[package.metadata.system-deps]
apr-1 = "*"
"apr-util-1" = "*"
