[workspace]
members = [".", "apr-sys"]

[package]
name = "apr"
version = "0.4.1"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@apache.org>"]
repository = "https://github.com/jelmer/apr-rs.git"
homepage = "https://github.com/jelmer/apr-rs"
license = "Apache-2.0"
description = "Rust bindings for Apache Portable Runtime"
documentation = "https://docs.rs/apr"

[dependencies]
apr-sys = { version = "0.2.1", path = "apr-sys" }
ctor = "0.6"
url = { version = "2", optional = true }

[features]
default = ["std"]
std = []
url = ["dep:url", "std"]
pool-debug = ["apr-sys/pool-debug"]

[build-dependencies]
