[package]
name = "apr-sys"
version = "0.2.0"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@apache.org>"]
repository = "https://github.com/jelmer/apr-rs.git"
homepage = "https://github.com/jelmer/apr-rs"
license = "Apache-2.0"
description = "Low-level FFI bindings for Apache Portable Runtime"
documentation = "https://docs.rs/apr-sys"

[lib]
doctest = false

[dependencies]

[build-dependencies]
bindgen = ">=0.60"
system-deps = "7"

[features]
pool-debug = []

[package.metadata.system-deps]
apr-1 = "*"
"apr-util-1" = "*"